--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4930912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# José G. Portela"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "25d7736c-ba17-4aff-b6bb-66eba20fbf4e",
    "metadata": {},
@@ -71,6 +81,266 @@
     "   - Use a try-except block to handle the error and continue prompting the user until a valid product name is entered.\n",
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4015a3b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1\n",
+    "def initialize_inventory(products):\n",
+    "    \"\"\"\n",
+    "    initialize_inventory that takes products as a parameter. \n",
+    "    Inside the function, implement the code for initializing the inventory dictionary using a loop and user input\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        quantity = input(f'Number of {product} available: ')\n",
+    "        while not quantity.isdigit():\n",
+    "            try:\n",
+    "                quantity = input(f'Number of {product} available, please type a digit: ')\n",
+    "                if quantity >= 0:\n",
+    "                    inventory[product] = int(quantity)\n",
+    "                    print(f'Product {product} has {quantity} in stock')\n",
+    "                else:\n",
+    "                    print(\"Input cannot be negative\")\n",
+    "            except ValueError:\n",
+    "                print(\"Input number not acceptable, input a valid number\") \n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "87039768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2\n",
+    "\n",
+    "def total_price(customer_orders):\n",
+    "    \"\"\"For each product in customer_orders, prompt the user to enter the price of that product.\n",
+    "        Use comprehension to calculate the total price. \"\"\"\n",
+    "    try:\n",
+    "        price_list = [float(input_numeric(f'Price of the product {p} ')) for p in customer_orders]\n",
+    "        calculated_price = sum(price_list)\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        print(\"Error: please enter a valid numerical value(s)\")\n",
+    "        calculated_price = None\n",
+    "    return calculated_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "89d288db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3\n",
+    "def get_customer_orders(products):\n",
+    "    \"\"\"\n",
+    "    Inside the function, implement the code for prompting the user to enter the product names using a loop.\n",
+    "    The function should return the customer_orders set.\n",
+    "    \"\"\"\n",
+    "    customer_orders = set() # create customer cart\n",
+    "    moreorders = True\n",
+    "    while moreorders:\n",
+    "        try:\n",
+    "            order = input('Enter the name of your product ')# ask for user input\n",
+    "            while order not in products: # input validation\n",
+    "                order = input(f'Please type a product in {products} ')# ask for user input\n",
+    "            customer_orders.add(order)\n",
+    "            tmp = input(\"Please type Yes or No. Want to order something else? Type 'Yes' or 'No':\")\n",
+    "            while tmp !='Yes' and tmp != 'No':\n",
+    "                tmp = input(\"Please type Yes or No. Want to order something else? Type 'Yes' or 'No': \")# ask for user input\n",
+    "            if tmp.capitalize().strip() == 'Yes':\n",
+    "                moreorders = True\n",
+    "            else:\n",
+    "                moreorders = False\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input, please type the name of your product\")\n",
+    "    return customer_orders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "240ec233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    \"\"\"\n",
+    "    initialize_inventory that takes products as a parameter. \n",
+    "    Inside the function, implement the code for initializing the inventory dictionary using a loop and user input\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        quantity = input(f'Number of {product} available: ')\n",
+    "        while not quantity.isdigit():\n",
+    "            try:\n",
+    "                quantity = input(f'Number of {product} available, please type a digit: ')\n",
+    "                if quantity >= 0:\n",
+    "                    inventory[product] = int(quantity)\n",
+    "                    print(f'Product {product} has {quantity} in stock')\n",
+    "                else:\n",
+    "                    print(\"Input cannot be negative\")\n",
+    "            except ValueError:\n",
+    "                print(\"Input number not acceptable, input a valid number\") \n",
+    "    return inventory\n",
+    "\n",
+    "def get_customer_orders(products):\n",
+    "    \"\"\"\n",
+    "    Inside the function, implement the code for prompting the user to enter the product names using a loop.\n",
+    "    The function should return the customer_orders set.\n",
+    "    \"\"\"\n",
+    "    customer_orders = set() # create customer cart\n",
+    "    moreorders = True\n",
+    "    while moreorders:\n",
+    "        try:\n",
+    "            order = input('Enter the name of your product ')# ask for user input\n",
+    "            while order not in products: # input validation\n",
+    "                order = input(f'Please type a product in {products} ')# ask for user input\n",
+    "            customer_orders.add(order)\n",
+    "            tmp = input(\"Please type Yes or No. Want to order something else? Type 'Yes' or 'No':\")\n",
+    "            while tmp !='Yes' and tmp != 'No':\n",
+    "                tmp = input(\"Please type Yes or No. Want to order something else? Type 'Yes' or 'No': \")# ask for user input\n",
+    "            if tmp.capitalize().strip() == 'Yes':\n",
+    "                moreorders = True\n",
+    "            else:\n",
+    "                moreorders = False\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input, please type the name of your product\")\n",
+    "    return customer_orders\n",
+    "\n",
+    "def total_price(customer_orders):\n",
+    "    \"\"\"For each product in customer_orders, prompt the user to enter the price of that product.\n",
+    "        Use comprehension to calculate the total price. \"\"\"\n",
+    "    try:\n",
+    "        price_list = [float(input_numeric(f'Price of the product {p} ')) for p in customer_orders]\n",
+    "        calculated_price = sum(price_list)\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        print(\"Error: please enter a valid numerical value(s)\")\n",
+    "        calculated_price = None\n",
+    "    return calculated_price\n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    \"\"\"Inside the function, implement the code for updating the inventory dictionary based on the customer orders.\n",
+    "    Use comprehension to filter out the products with a quantity of zero from the inventory.\"\"\"\n",
+    "    inventory_local = inventory.copy()\n",
+    "\n",
+    "    for product in customer_orders:\n",
+    "        if product in inventory_local and inventory_local[product] > 0:\n",
+    "            inventory_local[product] -= 1\n",
+    "        elif product in inventory_local and inventory_local[product] == 0:\n",
+    "            print(f\"Warning: Product {product} is out of stock. Cannot fulfill the order.\")\n",
+    "        elif product not in inventory_local:\n",
+    "            print(f\"Warning: Product {product} not found in inventory.\")\n",
+    "\n",
+    "    return inventory_local\n",
+    "\n",
+    "\n",
+    "def update_inventory_using_global(customer_orders,inventory):\n",
+    "    \"\"\"Inside the function, implement the code for updating the inventory dictionary based on the customer orders.\"\"\"\n",
+    "    for product in customer_orders:\n",
+    "        inventory[product]-=1\n",
+    "\n",
+    "def calculate_order_statistics(customer_orders,inventory):\n",
+    "    \"\"\"Inside the function, implement the code for calculating the order statistics \n",
+    "    (total products ordered, and percentage of unique products ordered). The function should return these values.\"\"\"\n",
+    "    total_products = len(customer_orders)\n",
+    "    percentage_unique_products = sum(inventory.values())\n",
+    "    return total_products,percentage_unique_products\n",
+    "\n",
+    "def print_order_statistics(statistics_tuple):\n",
+    "    \"\"\"\n",
+    "    Inside the function, implement the code for printing the order statistics.\n",
+    "    \"\"\"\n",
+    "    print(f'''Order Statistics:\n",
+    "Total Products Ordered: {statistics_tuple[0]}\n",
+    "Percentage of Products Ordered: {statistics_tuple[1]}% ''')\n",
+    "\n",
+    "def print_updated_inventory(inventory):\n",
+    "    \"\"\"Inside the function, implement the code for printing the updated inventory.\"\"\"\n",
+    "    print(f'The inventory after customer purchase is :{inventory}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "21c55a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of t-shirt available: 9\n",
+      "Number of mug available: 8\n",
+      "Number of hat available: 7\n",
+      "Number of book available: 6\n",
+      "Number of keychain available: 5\n",
+      "Enter the name of your product mug\n",
+      "Please type Yes or No. Want to order something else? Type 'Yes' or 'No':Yes\n",
+      "Enter the name of your product hat\n",
+      "Please type Yes or No. Want to order something else? Type 'Yes' or 'No':No\n",
+      "Warning: Product hat not found in inventory.\n",
+      "Warning: Product mug not found in inventory.\n",
+      "Order Statistics:\n",
+      "Total Products Ordered: 2\n",
+      "Percentage of Products Ordered: 0% \n",
+      "The inventory after customer purchase is :{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "inventory = initialize_inventory(p)\n",
+    "customer_orders = get_customer_orders(p)\n",
+    "statistics_tuple = calculate_order_statistics(customer_orders,inventory)\n",
+    "inventory = update_inventory(customer_orders,inventory)\n",
+    "#update_inventory_using_global(customer_orders,inventory) #can be used but it is not best practices\n",
+    "print_order_statistics(statistics_tuple)\n",
+    "print_updated_inventory(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1939a54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def restar():\n",
+    "    while True:\n",
+    "        game()\n",
+    "        restart = input('do you want to restart Yes/No?')\n",
+    "        if restart == 'No'\n",
+    "            break\n",
+    "        elif restart == 'Yes':\n",
+    "            continue\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "def restart():\n",
+    "    while True:\n",
+    "        game()\n",
+    "        restart = input('Do you want to restart? (Yes/No): ')\n",
+    "        if restart.upper() == 'No':\n",
+    "            break\n",
+    "        elif restart.upper() == 'Yes':\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(\"Invalid input. Please enter 'Yes' or 'No'.\")\n"
    ]
   }
  ],
